# jeolm

./: .gitignore  CMakeLists.txt  README.md  bashrc.part  jeolm-completion.sh  setup.py
asymptote/: jeolm.asy
latex/: CMakeLists.txt  jeolm-olymp.dtx  jeolm-tourn.dtx  jeolm.dtx  ltxdoc-local.sty
python/: __init__.py  __main__.py  argparser.py  builder.py  buildline.py  commands.py  completion.py  diffprint.py  driver.py  fancify.py  filesystem.py  flags.py  inrecords.py  logging.py  metadata.py  nodes.py  records.py  spell.py  target.py  utils.py  yaml.py
python/driver/: __init__.py  base.py  delegating.py  flags.py  generating.py  generic.py  regular.py  target.py  testpaper.py
python/drivers/: __init__.py  course.py  tourn.py
python/resources/: style-core.yaml
resources/testpaper/.jeolm/: local.py
scripts/: CMakeLists.txt  jeolm
source/: pylintrc
source/jeolm/: __init__.py  __main__.py  builder.py  buildline.py  commands.py  completion.py  date.py  diffprint.py  fancify.py  flags.py  latex_node.py  local.py  logging.py  makefile.py  metadata.py  node.py  node_factory.py  nodes.py  print_target_list.py  project.py  record_path.py  records.py  spell.py  target.py  utils.py  yaml.py
source/jeolm/commands/: __init__.py  clean.py  diffprint.py  excerpt.py  list_sources.py  makefile.py  review.py  spell.py
source/jeolm/driver/: __init__.py  addtoc.py  authors.py  git_link.py  groups.py  include.py  regular.py  source_link.py  test.py  testpaper.py  tourn.py  training.py
source/jeolm/node/: __init__.py  (+8 more)
test/: .gitignore
test/source/: _style.yaml
(+45 files in other folders)
